[package]
name = "shlonk"
version = "0.1.0"
edition = "2021"
description = "A simple URL shortener"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.21"
