[package]
name = "shlonk"
version = "0.1.11"
edition = "2021"
description = "A simple URL shortener"
license = "GPL-2.0"
homepage = "https://github.com/tarneaux/shlonk"
authors = ["tarneaux <tarneo@tarneo.fr>"]
repository = "https://github.com/tarneaux/shlonk"
keywords = ["link-shortener"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
rocket = ">= 0.5.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
